# regmixer

./: .gitignore  03242025_plot_data.ipynb  03272025_analysis.ipynb  04012025_subset_analysis.ipynb  04082025_evals.ipynb  05302025_dclm_repetition_constraints.ipynb  06042025_conditional_superswarm.ipynb  README.md  evaluate_swarm_skills_mt_mbpp.sh  launch_cost_ablations_30m.sh  launch_cost_ablations_lightgbm_30m.sh  launch_cost_ablations_part_2_30m.sh  load_results.ipynb  propose_code_math_mix.sh  propose_dclm_conditional_s2pdf_mix.sh  propose_dclm_conditional_stackedu_mix.sh  propose_dclm_evil_conditional_s2pdf_mix.sh  propose_dclm_evil_conditional_stackedu_mix.sh  propose_dclm_flatswarm_conditional_s2pdf_mix.sh  propose_dclm_flatswarm_conditional_stackedu_mix.sh  propose_dclm_mix.sh  propose_dclm_s2pdf_mix.sh  propose_dclm_s2pdf_patch_mix.sh  propose_dclm_stackedu_mix.sh  propose_dclm_stackedu_patch_mix.sh  propose_gen_mc_code_math_mix.sh  propose_gen_mcqa_mix.sh  propose_reasoning_mix.sh  pyproject.toml  sweep_train_sizes.sh  visualize_per_task_improvements.ipynb  visualize_proposed_mixes.ipynb  visualize_s2pdf_pes2o_mixes.ipynb
.github/workflows/: main.yaml
eval/: convert_checkpoint.py
src/regmixer/: aliases.py  cli.py  synthesize_mixture.py  train.py  utils.py  workspace.py
src/regmixer/config/: TYPE-dclm-datadelve-1xC-30m.yaml  all-dressed-swarm.yaml  dclm-datadelve-1xC-190m.yaml  dclm-datadelve-1xC-30m-dolma2tok.yaml  dclm-datadelve-1xC-30m.yaml  dclm-datadelve-1xC.yaml  dclm-datadelve-3xC.yaml  dclm-datadelve-5xC-30m-dolma2tok-subset.yaml  dclm-datadelve-5xC-30m-dolma2tok.yaml  dclm-datadelve-5xC-30m.yaml  dclm-datadelve-5xC.yaml  dclm-datadelve-format-1xC-30m.yaml  dclm-example.yaml  dclm-larger-datadelve-5xC-30m.yaml  dclm-rw-datadelve-5xC-30m.yaml  dclm-wiki-5xC-30m.yaml  dclm_pdf_swarm.yaml  example.yaml  olmo2-5xC-30m-augusta-2048.yaml  olmo2-5xC-30m-augusta.yaml  olmo2-5xC-30m-dense.yaml  olmo2-5xC-30m-jupiter.yaml  olmo2-5xC-30m-wiki.yaml  olmo2-5xC-30m.yaml  olmo2-7b-anneal-1b-binary-search.yaml  olmo2-7b-anneal-1b.yaml  olmo2-pdfs-datadelve-5xC-30m-augusta-2048.yaml  pdf_swarm_new.yaml  stackedu-5xC-30m-dense.yaml  stackedu-5xC-30m-with-dclm.yaml  starcoder-wiki-5xC-30m.yaml  superswarm.yaml  superswarm_conditional_dclm.yaml  superswarm_conditional_dclm_stackedu.yaml  superswarm_conditional_dclm_v2.yaml  vigintiles.yaml
src/regmixer/config/for_paper/: backfill-5xC-30m-dclm-conditional-s2pdf-2T.yaml  backfill-5xC-30m-dclm-conditional-s2pdf.yaml  backfill-5xC-30m-dclm-conditional-stackedu-2T.yaml  backfill-5xC-30m-dclm-conditional-stackedu.yaml  backfill-5xC-30m-dclm-flat-swarm-evil-p-conditional-s2pdf.yaml  backfill-5xC-30m-dclm-flat-swarm-evil-p-conditional-stackedu.yaml  backfill-5xC-30m-s2pdf.yaml  (+18 more)
src/regmixer/data/: dataset.py  utils.py
src/regmixer/eval/: aliases.py  all_dressed_requested_vs_available_tokens.yaml  all_dressed_stackedu_requested_vs_available_tokens.yaml  cli.py  constants.py  cost_ablation_1B_5xC_dclm_requested_vs_available_tokens.yaml  dclm_final_requested_vs_available_tokens.yaml  evaluate_checkpoint.py  law.py  midtraining_code_math_requested_vs_available_tokens.yaml  midtraining_code_math_requested_vs_available_tokens_30.yaml  midtraining_code_math_requested_vs_available_tokens_35.yaml  midtraining_code_math_requested_vs_available_tokens_40.yaml  midtraining_code_math_requested_vs_available_tokens_45.yaml  midtraining_code_math_requested_vs_available_tokens_50.yaml  midtraining_code_math_requested_vs_available_tokens_55.yaml  midtraining_code_math_requested_vs_available_tokens_60.yaml  midtraining_code_math_requested_vs_available_tokens_65.yaml  midtraining_code_math_requested_vs_available_tokens_70.yaml  midtraining_code_math_requested_vs_available_tokens_coarse.yaml  midtraining_code_requested_vs_available_tokens.yaml  midtraining_gen_mc_code_math_requested_vs_available_tokens_100.yaml  midtraining_gen_mc_code_math_requested_vs_available_tokens_50_50.yaml  midtraining_gen_mc_code_math_requested_vs_available_tokens_525_40.yaml  midtraining_gen_mc_code_math_requested_vs_available_tokens_85_with_updated_swallowcode_code_fim.yaml  midtraining_gen_mc_code_math_requested_vs_available_tokens_85_with_updated_swallowcode_code_fim_swallowmath.yaml  midtraining_gen_mcqa_requested_vs_available_tokens.yaml  midtraining_gen_mcqa_requested_vs_available_tokens_100.yaml  midtraining_gen_mcqa_requested_vs_available_tokens_100_coarse.yaml  midtraining_gen_mcqa_requested_vs_available_tokens_40.yaml  midtraining_gen_mcqa_requested_vs_available_tokens_50.yaml  midtraining_gen_mcqa_requested_vs_available_tokens_70.yaml  midtraining_gen_mcqa_requested_vs_available_tokens_70_coarse.yaml  midtraining_math_requested_vs_available_tokens.yaml  midtraining_reasoning_requested_vs_available_tokens.yaml  midtraining_reasoning_requested_vs_available_tokens_v2_10.yaml  midtraining_reasoning_requested_vs_available_tokens_v2_15.yaml  midtraining_reasoning_requested_vs_available_tokens_v2_75.yaml  pdf_requested_vs_available_tokens.yaml  stack_requested_vs_available_tokens.yaml  (+8 more)
src/regmixer/internal/: cli.py  convert_cookbook_mixture.py  convert_mixture.py  model_launch_cmds.md
src/regmixer/model/: aliases.py  evaluators.py  transformer.py
src/scripts/: format_runs.py  organize_runs_in_workspace.py  update_beaker_image.sh
(+299 files in other folders)
